--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "bookshelf",
   "private": true,
   "dependencies": {
+    "css-loader": "^3.4.2",
+    "file-loader": "^5.0.2",
+    "less": "^3.10.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-manifest-plugin": "^2.2.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0"
