Add build command for webpack

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,7 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/public/packs
-/public/packs-test
+/public/dist
 /node_modules
 /yarn-error.log
 yarn-debug.log*
