--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/public/dist
+/public/packs
+/public/packs-test
 /node_modules
 /yarn-error.log
 yarn-debug.log*
