Setting to permit empty method describing in multi line

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,9 @@ Style/AsciiComments:
 Style/Documentation:
   Enabled: false
 
+Style/EmptyMethod:
+  EnforcedStyle: expanded
+
 Style/RedundantReturn:
   Enabled: false
 
