--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,9 @@ AllCops:
 Layout/SpaceInsideArrayLiteralBrackets:
   Enabled: false
 
+Naming/MemoizedInstanceVariableName:
+  Enabled: false
+
 Style/AsciiComments:
   Enabled: false
 
