--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,9 @@ Style/EmptyMethod:
 Style/RedundantReturn:
   Enabled: false
 
+Style/TrailingCommaInArguments:
+  Enabled: false
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*_spec.rb
