--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -30,6 +30,9 @@ Style/RedundantReturn:
 Style/TrailingCommaInArguments:
   Enabled: false
 
+Metrics/AbcSize:
+  Max: 20
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*_spec.rb
