Update setting of rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,9 @@ Style/Documentation:
 Style/EmptyMethod:
   EnforcedStyle: expanded
 
+Style/GuardClause:
+  Enabled: false
+
 Style/RedundantReturn:
   Enabled: false
 
