--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: bookshelf_development
+  database: my_bookshelf_development
   username: postgres
   host: localhost
   port: 15432
@@ -32,7 +32,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: bookshelf
+  #username: my_bookshelf
 
   # The password associated with the postgres role (username).
   #password:
@@ -60,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: bookshelf_test
+  database: my_bookshelf_test
   username: postgres
   host: localhost
   port: 15432
@@ -86,6 +86,6 @@ test:
 #
 production:
   <<: *default
-  database: bookshelf_production
-  username: bookshelf
-  password: <%= ENV['BOOKSHELF_DATABASE_PASSWORD'] %>
+  database: my_bookshelf_production
+  username: my_bookshelf
+  password: <%= ENV['MY_BOOKSHELF_DATABASE_PASSWORD'] %>
