Introduece docker for rails app

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,16 +17,14 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  # For details on connection pooling, see Rails configuration guide
-  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  host: db
+  port: 5432
+  username: postgres
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
   database: my_bookshelf_development
-  username: postgres
-  host: localhost
-  port: 15432
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -61,9 +59,6 @@ development:
 test:
   <<: *default
   database: my_bookshelf_test
-  username: postgres
-  host: localhost
-  port: 15432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
