--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,26 @@ version: '3.7'
 services:
   db:
     build:
-      context: .
-      dockerfile: docker/db/Dockerfile
+      context: ./docker/db
+      dockerfile: Dockerfile
     volumes:
-      - my_boookshelf_postgres:/var/lib/postgresql/data
+      - my_boookshelf_db:/var/lib/postgresql/data
     ports:
-      - 15432:5432
+      - 5432:5432
+  app:
+    build:
+      context: .
+      dockerfile: docker/app/Dockerfile
+    tty: true
+    stdin_open: true
+    command: bundle exec rails server -b 0.0.0.0
+    volumes:
+      - .:/app:cached
+      - ./node_modules:/app/node_modules:delegated
+    ports:
+      - 3000:3000
+    depends_on:
+      - db
+
 volumes:
-  my_boookshelf_postgres:
-    external: true
+  my_boookshelf_db:
