--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
       context: ./docker/db
       dockerfile: Dockerfile
     volumes:
-      - my_boookshelf_db:/var/lib/postgresql/data
+      - my_boookshelf_db:/var/lib/postgresql/data:delegated
     ports:
-      - 5432:5432
+      - '5432:5432'
   app:
     build:
       context: .
@@ -19,7 +19,7 @@ services:
       - .:/app:cached
       - ./node_modules:/app/node_modules:delegated
     ports:
-      - 3000:3000
+      - '3000:3000'
     depends_on:
       - db
 
