Rename root of rails application

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -9,13 +9,13 @@ RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
       yarn \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /app
+WORKDIR /webapp
 
 COPY Gemfile Gemfile.lock ./
 RUN gem install bundler:2.1.4 \
   && bundle install --jobs=4
 
-COPY . /app
+COPY . /webapp
 RUN bin/rails yarn:install
 
 COPY entrypoint.sh /usr/bin/
