--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     stdin_open: true
     command: bundle exec rails server -b 0.0.0.0
     volumes:
-      - .:/app:cached
-      - ./node_modules:/app/node_modules:delegated
+      - .:/webapp:cached
+      - ./node_modules:/webapp/node_modules:delegated
     ports:
       - '3000:3000'
     depends_on:
