--- a/docker/nginx/my_bookshelf.conf
+++ b/docker/nginx/my_bookshelf.conf
@@ -3,21 +3,16 @@ upstream webapp {
 }
 
 server {
-  listen 80;
-  server_name localhost;
-
-  keepalive_timeout 5;
-
+  listen 80 default_server;
   root /webapp/public;
 
-  try_files $uri/index.html $uri @webapp;
-
   error_page 500 502 503 504 /50x.html;
-  location = /50x.html {
-    root /webapp/public;
-  }
+  error_page 404 /404.html;
+  error_page 422 /422.html;
+  try_files $uri/index.html $uri @webapp;
+  keepalive_timeout 5;
 
-  location / {
+  location @webapp {
     proxy_redirect off;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
