--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -15,10 +15,13 @@ COPY Gemfile Gemfile.lock ./
 RUN gem install bundler:2.1.4 \
   && bundle install --jobs=4
 
+ARG RAILS_ENV
+
 COPY . /webapp
 RUN bin/rails yarn:install \
   && mkdir -p tmp/sockets \
   && mkdir -p tmp/pids
+RUN if [ "${RAILS_ENV}" = "production" ]; then bin/rails webpacker:clobber && bin/rails webpacker:compile; fi
 
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
