--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "bootstrap": "^4.4.1",
     "bootstrap-material-design": "^4.1.2",
     "jquery": "^3.4.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "raty-js": "^2.9.0"
   },
   "version": "0.1.0",
   "devDependencies": {
