Run 'yarn add resolve-url-loader'

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap-material-design": "^4.1.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
-    "raty-js": "^2.9.0"
+    "raty-js": "^2.9.0",
+    "resolve-url-loader": "^3.1.1"
   },
   "version": "0.1.0",
   "devDependencies": {
