--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,7 +96,7 @@ workflows:
               only: master
           repo: '${AWS_RESOURCE_NAME_PREFIX}-app'
           path: '.'
-          extra-build-args: '--build-arg RAILS_ENV=production RAILS_MASTER_KEY=${RAILS_MASTER_KEY}'
+          extra-build-args: '--build-arg RAILS_ENV=production --build-arg RAILS_MASTER_KEY=${RAILS_MASTER_KEY}'
           tag: '${CIRCLE_SHA1}'
       - aws-ecs/deploy-service-update:
           requires:
